# fr

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  openapi-schema.yml  pyproject.toml
api/: serializers.py  urls.py  views.py
clients/: admin.py  forms.py  models.py  repository.py  tests.py  validators.py
clients/migrations/: 0001_initial.py
mailing/: admin.py  constants.py  forms.py  models.py  repository.py  signals.py  tasks.py  tests.py  validators.py
mailing/logic/: mailing_tasks.py
mailing/logic/mailing_report/: services.py
mailing/logic/perform_mailing/: model.py  services.py
mailing/logic/perform_mailing/messaging_services/: fake.py  fbrq.py
mailing/migrations/: 0001_initial.py
main/: celery.py  settings.py  urls.py
user_notification/: admin.py  models.py  repository.py  tasks.py
user_notification/logic/perform_notification/: base_model.py  base_services.py
user_notification/logic/perform_notification/daily_mailing_report/: model.py  services.py
user_notification/logic/perform_notification/notification_services/: email.py
user_notification/migrations/: 0001_initial.py  0002_auto_20230525_1217.py
users/: models.py
users/migrations/: 0001_initial.py
web_ui/: forms.py  urls.py  views.py  widgets.py
web_ui/templates/registration/: login.html
web_ui/templates/web_ui/: base.html  mailing.html  mailing_form.html  mailings.html  mailings_report.html
web_ui/templatetags/: tags.py
