[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
djangorestframework = "^3.14.0"
celery = "^5.2.7"
redis = "^4.5.5"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"
requests = "^2.30.0"
django-environ = "^0.10.0"
social-auth-app-django = "^5.2.0"
pyyaml = "^6.0"
uritemplate = "^4.1.1"
drf-yasg = "^1.21.5"
django-prometheus = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
